<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtNum1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/in_n1"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/txvNum1"
        app:layout_constraintStart_toStartOf="@+id/txvNum1"
        app:layout_constraintTop_toBottomOf="@+id/txvNum1" />

    <EditText
        android:id="@+id/edtNum2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/in_n2"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/txvNum2"
        app:layout_constraintStart_toStartOf="@+id/txvNum2"
        app:layout_constraintTop_toBottomOf="@+id/txvNum2" />

    <TextView
        android:id="@+id/txvSum"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/btnSum"
        app:layout_constraintStart_toStartOf="@+id/btnSum"
        app:layout_constraintTop_toBottomOf="@+id/btnSum" />

    <TextView
        android:id="@+id/txvGreater"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/btnGreater"
        app:layout_constraintStart_toStartOf="@+id/btnGreater"
        app:layout_constraintTop_toBottomOf="@+id/btnGreater" />

    <Button
        android:id="@+id/btnGreater"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/greater"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/edtNum2"
        app:layout_constraintTop_toBottomOf="@+id/edtNum2" />

    <Button
        android:id="@+id/btnSum"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/sum"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/edtNum2"
        app:layout_constraintTop_toBottomOf="@+id/edtNum2" />

    <TextView
        android:id="@+id/txvNum2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/n2"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/edtNum1"
        app:layout_constraintStart_toStartOf="@+id/edtNum1"
        app:layout_constraintTop_toBottomOf="@+id/edtNum1" />

    <TextView
        android:id="@+id/txvNum1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/n1"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/txvLabel"
        app:layout_constraintStart_toStartOf="@+id/txvLabel"
        app:layout_constraintTop_toBottomOf="@+id/txvLabel" />

    <TextView
        android:id="@+id/txvLabel"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>